@@ -948,123 +948,6 @@ public class FedoraObjectRepository implements IObjectRepository
     }
 
 
-    @Override
-    public CargoContainer getDataFromObject( String objectIdentifier, DataStreamType streamtype ) throws ObjectRepositoryException
-    {
-        if ( null == streamtype )
-        {
-            String error = String.format( "DataStreamType was null, cannot perform search in repository" );
-            log.error( error );
-            throw new ObjectRepositoryException( new IllegalArgumentException( error ) );
-        }
-
-        AdministrationStream adminStream = getAdministrationStream( objectIdentifier );
-
-        CargoContainer cargo = new CargoContainer();
-        cargo.setIdentifier( new PID( objectIdentifier ) );
-
-        try
-        {
-            for( Pair<Integer, Pair<String, CargoObject>> pairs : adminStream.getStreams() )
-            {
-                DataStreamType datastreamtype = pairs.getSecond().getSecond().getDataStreamType();
-                if( datastreamtype == streamtype )
-                {
-                    String dsId = pairs.getSecond().getFirst();
-                    CargoObject co = pairs.getSecond().getSecond();
-                    byte[] data;
-                    try
-                    {
-                        data = this.fedoraHandle.getDatastreamDissemination( objectIdentifier, dsId, null );
-                    }
-                    catch( ConfigurationException ex )
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-                    catch( MalformedURLException ex )
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-                    catch( ServiceException ex )
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-
-                    cargo.add( datastreamtype, co.getFormat(), co.getSubmitter(), co.getLang(), co.getMimeType(), data );
-                }
-            }
-        }
-        catch( IOException ex )
-        {
-            String error = String.format( "Could not retrieve information from administration stream" );
-            log.error( error );
-            throw new ObjectRepositoryException( error, ex );
-        }
-        log.warn( String.format( "Returning empty CargoContainer for request of %s on %s", streamtype.getName(), objectIdentifier ) );
-        return cargo;
-    }
-
-
-    @Override
-    public CargoContainer getDataFromObject( String objectIdentifier, String dataIdentifier ) throws ObjectRepositoryException
-    {
-        AdministrationStream adminStream = getAdministrationStream( objectIdentifier );
-        CargoContainer cargo = new CargoContainer();
-        cargo.setIdentifier( new PID( objectIdentifier ) );
-
-        try
-        {
-            for( Pair<Integer, Pair<String, CargoObject>> pairs : adminStream.getStreams() )
-            {
-                String dsId = pairs.getSecond().getFirst();
-
-                if( dataIdentifier.equals( dsId ) )
-                {
-                    CargoObject co = pairs.getSecond().getSecond();
-                    byte[] data;
-                    try
-                    {
-                        log.trace( String.format( "getDatastreamDissemination( %s, %s, null )", objectIdentifier, dsId ) );
-                        data = this.fedoraHandle.getDatastreamDissemination( objectIdentifier, dsId, null );
-                    }
-                    catch (ConfigurationException ex)
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-                    catch( MalformedURLException ex )
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-                    catch( ServiceException ex )
-                    {
-                        String error = String.format( "Failed to retrieve data identified by '%s' from objectrepository pid '%s': %s", dsId, objectIdentifier, ex.getMessage() );
-                        log.error( error );
-                        throw new ObjectRepositoryException( error, ex );
-                    }
-                    cargo.add( co.getDataStreamType(), co.getFormat(), co.getSubmitter(), co.getLang(), co.getMimeType(),  data );
-                }
-            }
-        }
-        catch( IOException ex )
-        {
-            String error = String.format( "Could not retrieve information from administration stream" );
-            log.error( error );
-            throw new ObjectRepositoryException( error, ex );
-        }
-        return cargo;
-    }
-
-
     private AdministrationStream constructAdministrationStream( CargoContainer cargo ) throws ObjectRepositoryException
     {
 
