@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11172] "Der er to IObjectRepository.getDataFromObject metoder, ingen af dem bruges"
    - bug [11173] "IObjectRepository.deleteDataFromObejct metoden bruges ikke."
    - bug [11184] "AdministrationFunc virker som et værktøj til test eller drift end en funktionel test"
    - bug [11187] "tests/functionaltests/dk/dbc/opensearch/plugins mappen er tom og bør fjernes"
